Setup simple UI

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -6,4 +6,6 @@ body {
   margin: 0;
   height: 100%;
   overscroll-behavior: contain;
+  font-family: 'Roboto', sans-serif;
+  background-color: #e0dddd;
 }
