--- a/app/src/index.css
+++ b/app/src/index.css
@@ -7,5 +7,6 @@ body {
   height: 100%;
   overscroll-behavior: contain;
   font-family: 'Roboto', sans-serif;
-  background-color: #e0dddd;
+  background-color: #707793;
+  color: white;
 }
