--- a/app/src/index.css
+++ b/app/src/index.css
@@ -6,7 +6,8 @@ body {
   margin: 0;
   height: 100%;
   overscroll-behavior: contain;
-  font-family: 'Roboto', sans-serif;
+  /* font-family: 'Roboto', sans-serif; */
+  font-family: 'Barlow Condensed', sans-serif;
   background-color: #707793;
   color: white;
 }
