--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,12 @@
 {% load render_bundle from webpack_loader %}
 <html lang="en">
   <head>
+    <script>
+      var host = "www.ffcsleague.com";
+      if ((host == window.location.host) && (window.location.protocol != "https:")){
+        window.location.protocol = "https";
+      }
+    </script>
     <meta charset="utf-8">
     <meta name="keywords" content="league">
     <meta name="description" content="League">
@@ -9,7 +15,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap" rel="stylesheet">
     <title>FFCS</title>
   </head>
   <body>
