Use google analytics tag

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,6 +8,15 @@
         window.location.protocol = "https";
       }
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5LCVHRH2TZ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-5LCVHRH2TZ');
+    </script>
     <meta charset="utf-8">
     <meta name="keywords" content="league">
     <meta name="description" content="League">
