Update logo and stuff for playoofs

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -117,3 +117,18 @@ a {
   color: #fff;
   text-decoration: none;
 }
+
+@keyframes loading-image {
+  0% {
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+  50% {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+  100% {
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+}
