--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,6 +26,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="/static/app/favicon.ico" type="image/x-icon">
     <title>FFCS</title>
   </head>
   <body>
